# Uzima-Contracts

./: .gitattributes  .gitignore  .meta-tx-commit-msg.txt  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  makefile  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  setup.sh
config/: README.md  default.json  development.json  health_alerts_config.json  multi_region_dr.json  networks.toml  production.json  regulatory_frameworks.json  schema.json  staging.json  testing-pyramid.json
contract_optimizer/: Cargo.toml  README.md
contract_optimizer/src/: main.rs  metrics.rs
contracts/aml/: Cargo.toml
contracts/aml/src/: lib.rs  test.rs  types.rs
contracts/aml/src/detection/: mod.rs  pattern_detector.rs
contracts/aml/src/enforcement/: mod.rs  rule_enforcer.rs
contracts/aml/src/monitoring/: mod.rs  transaction_monitor.rs
contracts/audit/: Cargo.toml
contracts/audit/src/: errors.rs  lib.rs  test.rs  types.rs
contracts/audit/src/querying/: audit_query.rs  mod.rs
contracts/audit/src/storage/: immutable_storage.rs  mod.rs
contracts/audit/src/verification/: mod.rs  trail_verifier.rs
contracts/clinical_nlp/: Cargo.toml
contracts/clinical_nlp/src/: errors.rs  events.rs  icd_cpt_codes.rs  lib.rs  medical_terms.rs  nlp_engine.rs  sentiment.rs  test.rs
contracts/contract_behavior_fuzzing/: Cargo.toml
contracts/contract_behavior_fuzzing/src/: lib.rs
contracts/contract_behavior_fuzzing/tests/: identity_registry_fuzz.rs  medical_records_serde_fuzz.rs  sut_token_fuzz.rs  token_sale_fuzz.rs
contracts/contract_behavior_fuzzing/tests/support/: mod.rs
contracts/credential_notifications/: Cargo.toml
contracts/credential_notifications/src/: lib.rs
contracts/deprecation_framework/: Cargo.toml
contracts/deprecation_framework/src/: errors.rs  events.rs  lib.rs  test.rs  types.rs
contracts/dicomweb_services/: Cargo.toml  DICOM_CONFORMANCE.md  IMPLEMENTATION_COMPLETE.md
contracts/dicomweb_services/src/: lib.rs  simple_tests.rs  string_helpers.rs  test.rs
contracts/differential_privacy/: Cargo.toml
contracts/differential_privacy/src/: lib.rs  test.rs
contracts/drug_discovery/: Cargo.toml
contracts/drug_discovery/src/: lib.rs  test.rs
contracts/fhir_integration/: Cargo.toml
contracts/fhir_integration/src/: lib.rs  test.rs
contracts/fido2_authenticator/: Cargo.toml
contracts/fido2_authenticator/src/: lib.rs
contracts/healthcare_analytics_dashboard/: Cargo.toml  README.md
contracts/healthcare_analytics_dashboard/src/: lib.rs
contracts/healthcare_compliance/: Cargo.toml
contracts/healthcare_compliance/src/: lib.rs  test.rs
contracts/medical_consent_nft/: Cargo.toml  README.md
contracts/medical_consent_nft/src/: lib.rs  test.rs
contracts/medical_imaging/: Cargo.toml
contracts/medical_imaging/src/: lib.rs  test.rs
contracts/medical_records/: Cargo.toml  libcrypto_security_tests.rlib
contracts/medical_records/src/: errors.rs  events.rs  lib.rs  test.rs  test_migration.rs  test_permissions.rs  validation.rs
contracts/medical_records/tests/: crypto_security_tests.rs  healthcare_real_world_scenarios.sh  logging_tests.rs  medical_records_test.rs  zk_access_tests.rs  zk_property_tests.rs
contracts/medical_records/tests/common/: mod.rs
contracts/medical_records/tests/integration/: mod.rs
contracts/medical_records/tests/unit/: mod.rs
contracts/patient_gamification/: Cargo.toml
contracts/patient_gamification/src/: lib.rs  test.rs
contracts/payment_router/: Cargo.toml
contracts/payment_router/src/: lib.rs
contracts/reputation_access_control/: Cargo.toml
contracts/reputation_access_control/src/: lib.rs
contracts/reputation_integration/: Cargo.toml
contracts/reputation_integration/src/: lib.rs
contracts/sanitization/: Cargo.toml
contracts/sanitization/src/: lib.rs
contracts/secure_enclave/: Cargo.toml
contracts/secure_enclave/src/: lib.rs  test.rs
contracts/telemedicine/: Cargo.toml
contracts/telemedicine/src/: lib.rs  test.rs
contracts/upgrade_manager/: Cargo.toml
contracts/upgrade_manager/src/: errors.rs  lib.rs  test.rs
dashboard/: app.js  index.html  styles.css
docs/: ABE_ACCESS_CONTROL.md  AI_INTEGRATION.md  ANALYTICS_PLATFORM.md  API_REFERENCE.md  AUTH_PATTERNS.md  CHANGELOG_FORMAT.md  CHANGE_IMPACT_MATRIX.md  CLI_GUIDE.md  CODE_REVIEW_PROCESS.md  CODING_STANDARDS.md  CONTRACT_COMPLEXITY_SCORING.md  CONTRACT_GOVERNANCE_GUIDE.md  CONTRACT_INTERACTIONS.md  CONTRACT_LOGGING_STANDARDS.md  CONTRACT_NAMING_CONVENTIONS.md  CONTRACT_RESOURCE_LIMITS.md  CONTRACT_UPGRADE_SAFETY.md  CROSS_CHAIN_INTERACTION_FLOW.md  CRYPTOGRAPHIC_SECURITY_MODEL.md  DATA_ACCESS_PATTERNS.md  DECISION_PROCEDURES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  (+80 more)
tests/: Cargo.toml  FRAMEWORK.md  ai_integration_test.rs  compliance_tests.rs  did_integration_test.rs  error_handling.rs  event_system_test.rs  healthcare_reputation_test.py  lib.rs  meta_tx_benchmarks.rs  meta_tx_integration_test.rs  upgradeability_tests.rs  zk_tooling_tests.mjs
tests/.tmp-zk/: commitments.json  proof.json  proof_bad.json  vk.json
tests/aml/: AntiMoneyLaundering.test.ts
tests/audit/: AuditTrail.test.ts
tests/cli/: advanced_cli_tests.sh
tests/e2e/: smoke_e2e.rs
tests/forensics/: OnChainForensics.test.ts
tests/golden/events/: README.md  cross_chain_bridge.json  healthcare_payment.json  medical_records.json
tests/integration/: cross_chain_tests.rs  framework_tests.rs  healthcare_workflows.rs  ihe_fhir_integration_tests.rs  medical_records_integration.rs  medical_records_tests.rs  mod.rs  multi_region_dr_integration.rs
tests/integration_framework/: Cargo.toml
tests/integration_framework/src/: lib.rs
tests/interoperability_suite/: Cargo.toml
tests/interoperability_suite/src/: lib.rs
tests/interoperability_suite/tests/: contract_interoperability.rs
tests/mfa/: MultiFactorAuth.test.ts
tests/unit/: mod.rs  performance_tests.rs  property_based_tests.rs
tests/utils/: assertions.rs  contract_fixtures.rs  contract_utils.rs  integration_framework.rs  mod.rs  performance.rs  test_data.rs  test_fixtures.rs
(+501 files in other folders)
