[workspace]
resolver = "2"
members = [
    "contracts/*",
    "contract_optimizer",
    "tests/interoperability_suite",
]

# Issue #828 audit (see docs/SYSTEM_ARCHITECTURE.md "Excluded Contracts
# Audit" section). Entries below are deferred contracts that cannot yet
# compile against the workspace `soroban-sdk = "=21.7.7"` pin or are
# non-workspace-member directories (fuzz harnesses, integration test
# repos). Newly integrated contracts are no longer listed here.
exclude = [
    "contracts/medical_imaging",
    "contracts/healthcare_compliance",
    "contracts/clinical_nlp",
    "contracts/remote_patient_monitoring",
    "contracts/healthcare_analytics_dashboard",
    "contracts/healthcare_data_marketplace",
    "contracts/telemedicine",
    "contracts/mental_health_support",
    "contracts/patient_gamification",
    "contracts/medical_imaging_ai",
    "contracts/dicomweb_services",
    "contracts/multi_region_orchestrator",
    "contracts/regional_node_manager",
    "contracts/digital_twin",
    "contracts/aml",
    "contracts/forensics",
    "contracts/rbac",
    "contracts/federated_learning",
    "contracts/medical_records",
    "contracts/healthcare_oracle_network",

    # Deferred (issue #828 triage): contract compiles against older soroban-sdk
    # 21 patterns (format! in #[no_std], Vec::with_capacity, BytesN::from_array
    # arg shape mismatch) that need refactoring beyond current PR scope.
    "contracts/health_data_access_logging",

    # Non-contract or no-Cargo.toml entries (cannot be workspace members):
    "contracts/contract_behavior_fuzzing",
    "contracts/governance_integration_tests",
] 

[workspace.dependencies]
soroban-sdk = { version = "=21.7.7" }
soroban-cli = "=21.7.7"
governance_commons = { path = "libs/governance_commons" }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/soroban-project"

# Force compatible versions to fix stellar-xdr dependency conflicts
# Note: arbitrary dependencies removed to fix workspace inheritance issues

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
