[package]
name = "deprecation_framework"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["alloc", "testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[lib]
crate-type = ["cdylib"]

