[package]
name = "dicomweb-services"
version = "0.1.0"
edition = "2021"
description = "DICOMweb Services Integration for Uzima Contracts - QIDO-RS, WADO-RS, STOW-RS"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]
