[package]
name = "healthcare_analytics_dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ai_analytics = { path = "../ai_analytics", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]