[package]
name = "medical_records"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/soroban-project"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "=21.7.7"
common_error = { path = "../common_error" }
patient_consent_management = { path = "../patient_consent_management" }
upgradeability = { path = "../upgradeability" }

[dev-dependencies]
soroban-sdk = { version = "=21.7.7", features = ["testutils"] }
anomaly_detection = { path = "../anomaly_detection" }
predictive_analytics = { path = "../predictive_analytics" }
explainable_ai = { path = "../explainable_ai" }
zk_verifier = { path = "../zk_verifier" }
credential_registry = { path = "../credential_registry" }
# Property-based testing for ZK access control invariants (Issue #832).
proptest = "1.6.0"

[features]
default = []
testutils = ["soroban-sdk/testutils"]
