[package]
name = "telemedicine"
version = "0.1.0"
edition = "2021"
authors = ["Uzima Team"]
license = "MIT"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]
