[package]
name = "upgrade-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }
upgradeability = { path = "../upgradeability" }
governance_commons = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[lib]
crate-type = ["cdylib", "rlib"]
